# phoronix-reader

./: Cargo.toml  htm.txt
src/: article.rs  homepage.rs  linesplit.rs  main.rs  phoronix.html  phoronix_cli.rs  phoronix_gui.rs
