[package]
name = "phoronix-reader"
version = "0.1.0"
authors = ["jim4067 <jimmyimpulse2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
select = "0.5.0"
tokio = { version = "1.3.0", features = ["full"] }
