[package]
name = "phoronix-reader"
version = "0.1.0"
authors = ["jim4067 <jimmyimpulse2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.13.2"
getopts = "0.2.21"
gtk = "0.9.2"
pango = "0.9.1"
reqwest = { version = "0.11.2", features = ["blocking"] }
select = "0.5.0"
term = "0.7.0"
tokio = { version = "1.3.0", features = ["full"] }
